--- a/org/pages/publications.org
+++ b/org/pages/publications.org
@@ -25,13 +25,22 @@
 @@html:<h4 id=title-toc>Publications ToC</h4@@
 #+TOC: headlines 1 :target #publications
 
-** Researcher profile
+** Researcher profiles
+:PROPERTIES:
+:CUSTOM_ID: researcher-profiles
+:END:
 
 [[https://scholar.google.fr/citations?user=fv71B7UAAAAJ&hl=fr][GoogleScholar]] -- [[https://www.webofscience.com/wos/author/record/D-8323-2011][Web of Science]] --  [[https://orcid.org/0000-0002-1685-4997][ORCID]] --  [[https://www.researchgate.net/profile/Ghislain_Vieilledent][ResearchGate]] -- [[https://agritrop.cirad.fr/view/auteurcirad/556.date.html][Agritrop]]
 
 ** Articles
+:PROPERTIES:
+:CUSTOM_ID: articles
+:END:
 
 *** In preparation                                               :noexport:
+:PROPERTIES:
+:CUSTOM_ID: in-prep
+:END:
 
 **Clément J., F. Gosselin, P. Couteron, and G. Vieilledent.** 2023. =jSDM=: an R package to fit joint species distribution models. /Methods in Ecology and Evolution/.
 
@@ -50,6 +59,9 @@
 **Boisseaux M., D. Krebber, B. Burban, A. Casado-Garcia, J. Cazal1, J. Clément, G. Derroire, C. Fortunel, J.-Y. Goret, J. Heras, G. Jaouen, C. Scoffoni, G. Vieilledent, J. Vleminckx, S. Coste, H. Schimann, C. Stahl.** Local habitat cannot be explained by leaf chemical and water-related traits in neotropical trees. /Functional Ecology/.
 
 *** Preprints
+:PROPERTIES:
+:CUSTOM_ID: preprints
+:END:
 
 *Vieilledent G., C. Vancutsem, C. Bourgoin, P. Ploton, P. Verley, and F. Achard.* 2022. Spatial scenario of tropical deforestation and carbon emissions for the 21^{st} century. /bioRxiv/: [[doi:10.1101/2022.03.22.485306][485306]]. {{{pdf_url(https://www.biorxiv.org/content/10.1101/2022.03.22.485306v2.full.pdf)}}}, Supplementary materials {{{supp_url(https://www.biorxiv.org/content/biorxiv/early/2022/07/23/2022.03.22.485306/DC1/embed/media-1.pdf)}}} {{{altm(10.1101/2022.03.22.485306)}}}
 
@@ -62,7 +74,10 @@
 *Vieilledent G., M. Nourtier, C. Grinand, M. Pedrono, A. Clausen, T. Rabetrano, J.-R. Rakotoarijaona, B. Rakotoarivelo, F. A. Rakotomalala, L. Rakotomalala, A. Razafimpahanana, J. M. Ralison, and F. Achard.* 2020. It's not just poverty: unregulated global market and bad governance explain unceasing deforestation in Western Madagascar. /bioRxiv/: [[doi:10.1101/2020.07.30.229104][229104]]. {{{pdf_url(https://www.biorxiv.org/content/10.1101/2020.07.30.229104v1.full.pdf)}}} {{{altm(10.1101/2020.07.30.229104)}}}
 
 *** 2022
-     
+:PROPERTIES:
+:CUSTOM_ID: yr2022
+:END:
+
 [45]. *Ibanez T., W. J. Platt, P. J. Bellingham, G. Vieilledent, J. Franklin, P. H. Martin, C. Menkes, D. R. Pérez-Salicrup, J. Russell-Smith, and G. Keppel.* 2022. Altered cyclone--fire interactions are changing ecosystems. /Trends in Plant Science/. *27* (12): 1218--1230. {{{doi(10.1016/j.tplants.2022.08.005)}}}. {{{pdf(Ibanez2022-TRPLSC.pdf)}}} {{{altm(10.1016/j.tplants.2022.08.005)}}}
 
 [44]. *Justeau-Allaire D., G. Blanchard, T. Ibanez, X. Lorca, G. Vieilledent, and P. Birnbaum.* 2022. Fragmented Landscape Generator (=flsgen=): a neutral landscape generator with control of landscape structure and fragmentation indices. /Methods in Ecology and Evolution/. *13* (7): 1412-1420. {{{doi(10.1111/2041-210X.13859)}}}. {{{pdf(Justeau-Allaire2022-MEE.pdf)}}}, Supplementary materials {{{supp(Justeau-Allaire2022-MEE-SM.zip)}}} {{{altm(10.1111/2041-210X.13859)}}}
@@ -70,6 +85,9 @@
 [43]. *Araza A., S. de Bruin, M. Herold, S. Quegan, N. Labriere, P. Rodriguez-Veiga, V. Avitabile, M. Santoro, E. T.A. Mitchard, C. M. Ryan, O. L. Phillips, S. Willcock, H. Verbeeck, J. Carreiras, L. Hein, M.-J. Schelhaas, A. M. Pacheco-Pascagaza, P. da Conceição Bispo, G. Vaglio Laurin, G. Vieilledent, F. Slik, A. Wijaya, S. L. Lewis, A. Morel, J. Liang, H. Sukhdeo, D. Schepaschenko, J. Cavlovic, H. Gilani, and R. Lucas.* 2022. A comprehensive framework for assessing the accuracy and uncertainty of global above-ground biomass maps. /Remote Sensing of Environment/. *272*: 112917. {{{doi(10.1016/j.rse.2022.112917)}}}. {{{pdf(Araza2022-RSE.pdf)}}}, Supplementary materials {{{supp(Araza2022-RSE-SM.pdf)}}} {{{altm(10.1016/j.rse.2022.112917)}}}
 
 *** 2021
+:PROPERTIES:
+:CUSTOM_ID: yr2021
+:END:
 
 [42]. *Tagliari M. M., P. Danthu, J.-M. Leong Pock Tsy, C. Cornu, J. Lenoir, V. Carvalho-Rocha, and G. Vieilledent.* 2021. Not all species will migrate poleward as the climate warms: the case of the seven baobab species in Madagascar. /Global Change Biology/. *27* (23): 6071--6085. {{{doi(10.1111/gcb.15859)}}}. {{{pdf(Tagliari2021c-GCB.pdf)}}}, Supplementary materials {{{supp(Tagliari2021c-GCB-SM.pdf)}}} {{{altm(10.1111/gcb.15859)}}}
 
@@ -84,12 +102,18 @@
 [37]. *Vancutsem C., F. Achard, J.-F. Pekel, G. Vieilledent, S. Carboni, D. Simonetti, J. Gallego, L. E. O. C. Aragão, and R. Nasi.* 2021. Long-term (1990--2019) monitoring of forest cover changes in the humid tropics. /Science Advances/. *7* (10): eabe1603. {{{doi(10.1126/sciadv.abe1603)}}}. /bioRxiv/: [[doi:10.1101/2020.09.17.295774][229104]]. {{{pdf(Vancutsem2021-ScienceAdvances.pdf)}}}, Supplementary materials {{{supp(Vancutsem2021-ScienceAdvances-SM.pdf)}}} {{{altm(10.1126/sciadv.abe1603)}}}
 
 *** 2020
+:PROPERTIES:
+:CUSTOM_ID: yr2020
+:END:
 
 [36]. *Justeau-Allaire D. , G. Vieilledent, N. Rinck, P. Vismara, X. Lorca, and P. Birnbaum.* 2020. Constrained optimization of landscape indices in conservation planning to support ecological restoration in New Caledonia. /Journal of Applied Ecology/. *58* (4): 744--754. {{{doi(10.1111/1365-2664.13803)}}}. {{{pdf(Justeau-Allaire2020-JAE.pdf)}}} {{{altm(10.1111/1365-2664.13803)}}}
 
 [35]. *Grinand C., G. Vieilledent, T. Razafimbelo, J.-R. Rakotoarijaona, M. Nourtier, and M. Bernoux*. 2020. Landscape‐scale spatial modelling of deforestation, land degradation and regeneration using machine learning tools. /Land Degradation and Development/. *31* (13): 1699--1712. {{{doi(10.1002/ldr.3526)}}}. {{{pdf(Grinand2020-LDD.pdf)}}} {{{altm(10.1002/ldr.3526)}}}
 
 *** 2018
+:PROPERTIES:
+:CUSTOM_ID: yr2018
+:END:
 
 [34]. *Vieilledent G., F. J. Fischer, J. Chave, D. Guibal, P. Langbour, and J. Gérard.* 2018. New formula and conversion factor to compute basic wood density of tree species using a global wood technology database. /American Journal of Botany/. *105* (10): 1--9. {{{doi(10.1002/ajb2.1175)}}}. /bioRxiv/: [[doi:10.1101/274068][274068]]. {{{pdf(Vieilledent2018a-AJB.pdf)}}}, Supplementary materials {{{supp(Vieilledent2018a-AJB-SM.pdf)}}} {{{altm(10.1002/ajb2.1175)}}}
 
@@ -104,6 +128,9 @@ Study featured in: [[https://www.rd.com/culture/places-to-visit-before-they-disa
 [30]. *Langner A., J. Miettinen, M. Kukkonen, Ch. Vancutsem, D. Simonetti, G. Vieilledent, A. Verhegghen, J. Gallego, and H.-J. Stibig.* 2018. Towards operational monitoring of forest canopy disturbance in evergreen rain forests: a test case in continental Southeast Asia. /Remote Sensing/. *10* (4): 544. {{{doi(10.3390/rs10040544)}}}. {{{pdf(Langner2018-RemoteSensing.pdf)}}} {{{altm(10.3390/rs10040544)}}}
 
 *** 2017
+:PROPERTIES:
+:CUSTOM_ID: yr2017
+:END:
 
 [29]. *Dezécache C., E. Faure, V. Gond, J.-M. Salles, G. Vieilledent, and B. Hérault.* 2017. Gold-rush in a forested El Dorado: deforestation leakages and the need for regional cooperation. /Environmental Research Letters/. *12* (3): 034013. {{{doi(10.1088/1748-9326/aa6082)}}}. {{{pdf(Dezecache2017-ERL.pdf)}}} {{{altm(10.1088/1748-9326/aa6082)}}}
 
@@ -114,6 +141,9 @@ Study featured in: [[https://www.rd.com/culture/places-to-visit-before-they-disa
 [26]. *Grinand C., G. Le Maire, G. Vieilledent, H. Razakamanarivo, T. Razafimbelo, and M. Bernoux.* 2017. Estimating temporal changes in soil carbon stocks at the ecoregional scale in Madagascar using remote-sensing. /International Journal of Applied Earth Observation and Geoinformation/. *54*: 1--14. {{{doi(10.1016/j.jag.2016.09.002)}}}. {{{pdf(Grinand2017-JAG.pdf)}}} {{{altm(10.1016/j.jag.2016.09.002)}}}
 
 *** 2016
+:PROPERTIES:
+:CUSTOM_ID: yr2016
+:END:
 
 [25]. *Plumptre A. J., S. Nixon, D. Kujirakwinja, G. Vieilledent, R. Critchlow, E. A. Williamson, R. Nishuli, A. Kirkby, and J. S. Hall.* 2016. Catastrophic decline of world's largest primate: 80% loss of Grauer's gorilla (/Gorilla beringei graueri/) population justifies critically endangered status. /PLoS ONE/. *11* (10): e0162697. {{{doi(10.1371/journal.pone.0162697)}}}. {{{pdf(Plumptre2016-PLoSOne.pdf)}}}, {{{github(gorillas)}}} {{{altm(10.1371/journal.pone.0162697)}}}
 
@@ -134,19 +164,28 @@ Study featured in: [[https://t.co/pMXLUUrV0I][The Conversation]], [[file:images/
 [22]. *Kunstler G., D. Falster, D. Coomes, F. Hui, R. Kooyman, D. Laughlin, L. Poorter, M. Vanderwel, G. Vieilledent, S. J. Wright, M. Aiba, C. Baraloto, J. Caspersen, J. H. C. Cornelissen, S. Gourlet-Fleury, M. Hanewinkel, B. Hérault, J. Kattge, H. Kurokawa, Y. Onoda, J. Peñuelas, H. Poorter, M. Uriarte, S. Richardson, P. Ruiz-Benito, I-F. Sun, G. Ståhl, N. Swenson, J. Thompson, B. Westerlund, C. Wirth, M. Zavala , H. Zeng, J. Zimmerman, N. Zimmermann, and M. Westoby.* 2016. Plant functional traits have globally consistent effects on competition. /Nature/. *529*: 204--207. {{{doi(10.1038/nature16476)}}}. {{{pdf(Kunstler2016-Nature.pdf)}}}, Supplementary materials {{{supp(Kunstler2016-Nature-SM.pdf)}}}, Highly cited paper {{{wos(000368015700035)}}} {{{altm(10.1038/nature16476)}}}
 
 *** 2015
-    
+:PROPERTIES:
+:CUSTOM_ID: yr2015
+:END:
+
 [21]. *Labrière N., Y. Laumonier, B. Locatelli, G. Vieilledent, and M. Comptour.* 2015. Ecosystem Services and Biodiversity in a Rapidly Transforming Landscape in Northern Borneo. /PLoS ONE/. *10* (10): e0140423. {{{doi(10.1371/journal.pone.0140423)}}}. {{{pdf(Labriere2015-PLoSONE.pdf)}}}, Supplementary materials {{{supp(Labriere2015-PLoSONE-SM.zip)}}} {{{altm(10.1371/journal.pone.0140423)}}}
 
 [20]. *Courbaud B., V. Lafond, G. Lagarrigues, G. Vieilledent, T. Cordonnier, F. Jabot, and F. De Coligny.* 2015. Applying ecological model evaludation: Lessons learned with the forest dynamics model Samsara2. /Ecological Modelling/. *314*: 1--14. {{{doi(10.1016/j.ecolmodel.2015.06.039)}}}. {{{pdf(Courbaud2015-EM.pdf)}}}, Supplementary materials {{{supp(Courbaud2015-EM-SM.zip)}}} {{{altm(10.1016/j.ecolmodel.2015.06.039)}}}
 
 *** 2014
-  
+:PROPERTIES:
+:CUSTOM_ID: yr2014
+:END:
+
 [19]. *Chave J., Réjou-Méchain M., Búrquez A., Chidumayo E., Colgan M. S., Delitti W. B.C., Duque A., Eid T., Fearnside P. M., Goodman R. C., Henry M., Martínez-Yrízar A., Mugasha W. A., Muller-Landau H. C., Mencuccini M., Nelson B. W., Ngomanda A., Nogueira E. M., Ortiz-Malavassi E., Pélissier R., Ploton P., Ryan C. M., Saldarriaga J. G, and Vieilledent G.* 2014. Improved allometric models to estimate the aboveground biomass of tropical trees. /Global Change Biology/. *20* (10): 3177--3190. {{{doi(10.1111/gcb.12629)}}}. {{{pdf(Chave2014-GCB.pdf)}}}, Supplementary materials {{{supp(Chave2014-GCB-SM.pdf)}}}, [[https://chave.ups-tlse.fr/pantropical_allometry.htm][Pantropical allometry]] , Highly cited paper {{{wos(000342168500015)}}} {{{altm(10.1111/gcb.12629)}}}
 
 [18]. *Laurans M., B. Hérault, G. Vieilledent, and G. Vincent.* 2014. Vertical stratification reduces competition for light in dense tropical forests. /Forest Ecology and Management/. *329*: 79--88. {{{doi(10.1016/j.foreco.2014.05.059)}}}. {{{pdf(Laurans2014-FEM.pdf)}}}, Supplementary materials {{{supp(Laurans2014-FEM-SM.zip)}}} {{{altm(10.1016/j.foreco.2014.05.059)}}}
 
 *** 2013
-  
+:PROPERTIES:
+:CUSTOM_ID: yr2013
+:END:
+
 [17]. *Grinand C., F. Rakotomalala, V. Gond, R. Vaudry, M. Bernoux, and G. Vieilledent.* 2013. Estimating deforestation in tropical humid and dry forests in Madagascar from 2000 to 2010 using multi-date Landsat satellite images and the Random Forests classifier. /Remote Sensing of Environment/. *139*:68--80. {{{doi(10.1016/j.rse.2013.07.008)}}}. {{{pdf(Grinand2013-RSE.pdf)}}}, KMZ for Google Earth {{{kmz(Grinand2013-RSE.kmz)}}} {{{altm(10.1016/j.rse.2013.07.008)}}}
 
 [16]. *Henry M., A. Bombelli, C. Trotta, A. Alessandrini, L. Birigazzi, G. Sola, G. Vieilledent, P. Santenoise, F. Longuetaud, R. Valentini, N. Picard, and L. Saint-André.* 2013. GlobAllomeTree: International platform for tree allometric equations to support volume, biomass and carbon assessment. /iForest - Biogeosciences and Forestry./ *6* (1): 326. {{{doi(10.3832/ifor0901-006)}}}. {{{pdf(Henry2013-iForest.pdf)}}} {{{altm(10.3832/ifor0901-006)}}}
@@ -162,6 +201,9 @@ It featured also in the /Conservation Corridor/ post [[https://conservationcorri
 [14]. *Vieilledent G., C. Grinand, and R. Vaudry.* 2013. Forecasting deforestation and carbon emissions in tropical developing countries facing demographic expansion: a case study in Madagascar. /Ecology and Evolution/. *3*: 1702--1716. {{{doi(10.1002/ece3.550)}}}. {{{pdf(Vieilledent2013-EcologyAndEvolution.pdf)}}}, Supplementary materials {{{supp(Vieilledent2013-EcologyAndEvolution-SM.pdf)}}} {{{altm(10.1002/ece3.550)}}}
 
 *** 2012
+:PROPERTIES:
+:CUSTOM_ID: yr2012
+:END:
 
 [13]. *Razakamanarivo R. H., Razakavololona A., Razafindrakoto M.-A., Vieilledent G., and Albrecht A.* 2012. Below-ground biomass production and allometric relationships of Eucalyptus coppice plantation in the central highlands of Madagascar. /Biomass and Bioenergy/. *45*: 1--10. {{{doi(10.1016/j.biombioe.2011.01.020)}}}. {{{pdf(Razakamanarivo2012-BiomassAndBioenergy.pdf)}}} {{{altm(10.1016/j.biombioe.2011.01.020)}}}
 
@@ -176,6 +218,9 @@ It featured also in the /Conservation Corridor/ post [[https://conservationcorri
 [8]. *Courbaud B., Vieilledent G., and Kunstler G.* 2012. Intra-specific variability and the competition-colonisation trade-off: coexistence, abundance and stability patterns. /Theoretical Ecology/. *5* (1): 61--71. {{{doi(10.1007/s12080-010-0095-8)}}}. {{{pdf(Courbaud2012-TheoreticalEcology.pdf)}}} {{{altm(10.1007/s12080-010-0095-8)}}}
 
 *** 2011
+:PROPERTIES:
+:CUSTOM_ID: yr2011
+:END:
 
 [7]. *Fox J. C., Vieilledent G., Yosi C. K., Pokana J. N., and Keenan R. J.* 2011. Aboveground forest carbon dynamics in Papua New Guinea; isolating the influence of selective-harvesting and El Niño. /Ecosystems/. *14* (8): 1276--1288. {{{doi(10.1007/s10021-011-9480-4)}}}. {{{pdf(Fox2011-Ecosystems.pdf)}}} {{{altm(10.1007/s10021-011-9480-4)}}}
 
@@ -186,19 +231,28 @@ It featured also in the /Conservation Corridor/ post [[https://conservationcorri
 [4]. *Kunstler G., Albert C. H., Courbaud B., Lavergne S., Thuiller W., Vieilledent G., Zimmermann N. E., and Coomes D. A.* 2011. Effects of competition on tree radial-growth vary in importance but not in intensity along climatic gradients. /Journal of Ecology/. *99* (1): 300--312. {{{doi(10.1111/j.1365-2745.2010.01751.x)}}}. {{{pdf(Kunstler2011-JoE.pdf)}}}, Supplementary materials {{{supp(Kunstler2010-JoE-SM.pdf)}}} {{{altm(10.1111/j.1365-2745.2010.01751.x)}}}
 
 *** 2010
+:PROPERTIES:
+:CUSTOM_ID: yr2010
+:END:
 
 [3]. *Vieilledent G., Courbaud B., Kunstler G., Dhôte J.-F., and Clark J. S.* 2010. Individual variability in tree allometries determines light resource allocation in forest ecosystems: a hierarchical Bayesian approach. /Oecologia/. *163* (3): 759--773. {{{doi(10.1007/s00442-010-1581-9)}}}. {{{pdf(Vieilledent2010b-Oecologia.pdf)}}}, Supplementary materials {{{supp(Vieilledent2010b-Oecologia-SM.pdf)}}} {{{altm(10.1007/s00442-010-1581-9)}}}
 
 [2]. *Vieilledent G., Courbaud B., Kunstler G., and Dhôte J.-F.* 2010. Mortality of silver Fir and Norway Spruce in the Western Alps -- A semi-parametric approach combining size-dependent and growth-dependent mortality. /Annals of Forest Science/. *67* (3): 305. {{{doi(10.1051/forest/2009112)}}}. {{{pdf(Vieilledent2010a-AFS.pdf)}}} {{{altm(10.1051/forest/2009112)}}}
 
 *** 2009
+:PROPERTIES:
+:CUSTOM_ID: yr2009
+:END:
 
 [1]. *Vieilledent G., Courbaud B., Kunstler G., Dhôte J.-F., and Clark J. S.* 2009. Biases in the estimation of size dependent mortality models: advantages of a semi-parametric approach. /Canadian Journal of Forest Research/. *39* (8): 1430--1443. {{{doi(10.1139/X09-047)}}}. {{{pdf(Vieilledent2009-CJoFR.pdf)}}}, R script {{{github(U-shape-tree-mortality-DBH)}}} {{{altm(10.1139/X09-047)}}}
 
 [0]. *Vieilledent G.* 2009. Structuring uncertainty and variability of ecological processes in forest dynamics models -- Application to silver Fir and Norway Spruce coexistence. PhD Thesis. Cemagref--AgroParisTech. 259 p. oai:[[https://pastel.archives-ouvertes.fr/pastel-00005391][pastel.archives-ouvertes.fr:pastel-00005391]]. {{{pdf(MS-PhDThesis-GVieilledent.pdf)}}}
 
 ** Books or book chapters
-     
+:PROPERTIES:
+:CUSTOM_ID: books
+:END:
+
 [iv]. *Birnbaum P., Hequet V., Girardi J., Vandrot H., Mangeard T., Ibanez T., Blanchard E., Pouteau R., Blanchard G., Justeau-Allaire D., Vieilledent G., and Cassan J.-J.* 2021. Atlas de la forêt, Province Nord, Nouvelle-Calédonie. Editions province Nord, Koohnê, Nouvelle-Calédonie, 188 p. ISBN 13: 978-2-919510-30-6.
 
 [iii]. *Joint Research Centre (European Commission).* 2017. Science for the AU-EU partnership. Building knowledge for sustainable development. ISBN 13: 978-92-79-86961-7. {{{doi(10.2760/360029)}}}. {{{pdf_url(https://op.europa.eu/o/opportal-service/download-handler?identifier=62cde83f-72a2-11e8-9483-01aa75ed71a1&format=pdf&language=en&productionSystem=cellar&part=)}}} {{{altm(10.2760/360029)}}}
@@ -208,6 +262,9 @@ It featured also in the /Conservation Corridor/ post [[https://conservationcorri
 [i]. *Fox J. C., G. Vieilledent and R. J. Keenan*. 2011. Native forest individual-tree modelling in Papua New Guinea. in /Native forest individual-tree modelling in Papua New Guinea/ by J. C. Fox, R. J. Keenan, C. L. Brack and S. Saulei (eds). ACIAR Proceedings Series, Australian Centre for International Agricultural Research (ACIAR), 106-120. ISBN: 978-1-921962-11-0. {{{pdf(Fox2011a-PapuaNewGuinea.pdf)}}}
 
 ** Popular science articles
+:PROPERTIES:
+:CUSTOM_ID: popular-science-articles
+:END:
 
 [c]. *Strona G., Z. Szantoi, and G. Vieilledent*. 2018. Oil palms and primates can hardly co-exist in Africa. /The Science Breaker/. {{{doi(10.25250/thescbr.brk167)}}}. {{{pdf(Strona2018-TheScienceBreaker.pdf)}}}, [[https://www.thesciencebreaker.com/breaks/earth-space/oil-palms-and-primates-can-hardly-co-exist-in-africa][link]] {{{altm(10.25250/thescbr.brk167)}}}
 
