--- a/org/pages/research.org
+++ b/org/pages/research.org
@@ -14,6 +14,9 @@
 #+TOC: headlines 2 :target #research
 
 ** Research topics
+:PROPERTIES:
+:CUSTOM_ID: research-topics
+:END:
 
 *** Community ecology
 :PROPERTIES:
