--- a/org/pages/people.org
+++ b/org/pages/people.org
@@ -22,32 +22,32 @@
 :CUSTOM_ID: post-docs
 :END:
 
-*Benjamin Deneu*, planned in 2023, Co-supervisors: Pierre Bonnet and Alexis Joly, INRIA, /Comparing convolutional neural network (CNN) and joint species distribution models (JSDM) for modelling ecological communities/, Current position: Post-doc in progress.
+[[https://www.researchgate.net/profile/Benjamin-Deneu][*Benjamin Deneu*]], planned in 2023, Co-supervisors: Pierre Bonnet and Alexis Joly, INRIA, /Comparing convolutional neural network (CNN) and joint species distribution models (JSDM) for modelling ecological communities/, Current position: Post-doc in progress.
 
-*Salman Khan*, planned in 2023, Co-supervisors: Vincent Freycon and Isabelle Maréchaux, CNRS, UMR AMAP, /Improving the estimate of plant available water accounting for soil characteristics in tropical forests of French Guiana/, Current position: Post-doc in progress.
+[[https://www.researchgate.net/profile/Salman-Khan-44][*Salman Khan*]], planned in 2023, Co-supervisors: Vincent Freycon and Isabelle Maréchaux, CNRS, UMR AMAP, /Improving the estimate of plant available water accounting for soil characteristics in tropical forests of French Guiana/, Current position: Post-doc in progress.
 
-*Grégoire Blanchard* (collaboration), planned in 2023, Supervisor: Philippe Birnbaum, Institut Agronomique Calédonien, /Using remote sensing data to characterize edge effects in New-Caledonian forests/, Current position: Post-doc in progress.
+[[https://www.researchgate.net/profile/Gregoire-Blanchard][*Grégoire Blanchard*]] (collaboration), planned in 2023, Supervisor: Philippe Birnbaum, Institut Agronomique Calédonien, /Using remote sensing data to characterize edge effects in New-Caledonian forests/, Current position: Post-doc in progress.
 
-*Dimitri Justeau-Allaire* (collaboration), 2021, Supervisor: Philippe Birnbaum, Institut Agronomique Calédonien, /New tools to generate fragmented landscapes and compute landscape connectivity/, Current position: Researcher at IRD, UMR AMAP.
+[[https://dimitri-justeau.github.io/][*Dimitri Justeau-Allaire*]] (collaboration), 2021, Supervisor: Philippe Birnbaum, Institut Agronomique Calédonien, /New tools to generate fragmented landscapes and compute landscape connectivity/, Current position: Researcher at IRD, UMR AMAP.
 
 ** PhD students
 :PROPERTIES:
 :CUSTOM_ID: phd-students
 :END:
 
-*Jeanne Clément*, planned in 2023, Co-supervisor: Pierre Couteron, Université de Montpellier, Ecole doctorale GAIA, Thèse de doctorat, filière EERGP (Ecologie, Evolution, Ressources Génétiques, Paléontologie), /Prédire la vulnérabilité des espèces d'arbres au changement climatique en forêt Guyanaise via l'utilisation de modèles joints de distribution des espèces/, Following the PhD thesis: PhD thesis in progress.
+[[https://jeanneclement.github.io/][*Jeanne Clément*]], planned in 2023, Co-supervisor: Pierre Couteron, Université de Montpellier, Ecole doctorale GAIA, Thèse de doctorat, filière EERGP (Ecologie, Evolution, Ressources Génétiques, Paléontologie), /Prédire la vulnérabilité des espèces d'arbres au changement climatique en forêt Guyanaise via l'utilisation de modèles joints de distribution des espèces/, Following the PhD thesis: PhD thesis in progress.
 
-*Camille Girard-Tercieux*, 2022, Co-supervisors: Raphaël Pélissier and Isabelle Maréchaux, Université de Montpellier, Ecole doctorale GAIA, Thèse de doctorat, filière EERGP (Ecologie, Evolution, Ressources Génétiques, Paléontologie), /Rôle de la variabilité intra-spécifique dans la coexistence des espèces en forêt tropicale/, Following the PhD thesis: Currently unemployed.
+[[https://fr.linkedin.com/in/camille-girard-tercieux][*Camille Girard-Tercieux*]], 2022, Co-supervisors: Raphaël Pélissier and Isabelle Maréchaux, Université de Montpellier, Ecole doctorale GAIA, Thèse de doctorat, filière EERGP (Ecologie, Evolution, Ressources Génétiques, Paléontologie), /Rôle de la variabilité intra-spécifique dans la coexistence des espèces en forêt tropicale/, Following the PhD thesis: Currently unemployed.
 
-*Mario M. Tagliari*, 2021, Co-supervisor: Nivaldo Peroni, Université Fédérale de Santa Catarina (UFSC), Florianopolis, Brésil, PhD in ecology, Ecologia geral, etnoecologia e conservação, /Distribuição futura da Araucaria angustifolia: aspectos etnoecológicos e populacionais na dinâmica espaço-temporal na paisagem cultural da Floresta Ombrófila Mista/, Following the PhD thesis: Professor na Faculdade Municipal de Meio Ambiente (FAMA), Clevelândia, Paraná, Brésil.
+[[https://www.researchgate.net/profile/Mario-M-Tagliari][*Mario M. Tagliari*]], 2021, Co-supervisor: Nivaldo Peroni, Université Fédérale de Santa Catarina (UFSC), Florianopolis, Brésil, PhD in ecology, Ecologia geral, etnoecologia e conservação, /Distribuição futura da Araucaria angustifolia: aspectos etnoecológicos e populacionais na dinâmica espaço-temporal na paisagem cultural da Floresta Ombrófila Mista/, Following the PhD thesis: Professor na Faculdade Municipal de Meio Ambiente (FAMA), Clevelândia, Paraná, Brésil.
 
-*Dimitri Justeau-Allaire* (collaboration), 2020, Supervisors: Philippe Birnbaum and Xavier Lorca, Université de Montpellier, Ecole doctorale GAIA, Thèse de doctorat, filière EERGP (Ecologie, Evolution, Ressources Génétiques, Paléontologie), /Planification systématique de la conservation basée sur les contraintes, une approche générique et expressive -- Application à l'aide à la décision pour la conservation des forêts de Nouvelle-Calédonie/, Following the PhD thesis: Researcher at IRD, UMR AMAP.
+[[https://dimitri-justeau.github.io/][*Dimitri Justeau-Allaire*]] (collaboration), 2020, Supervisors: Philippe Birnbaum and Xavier Lorca, Université de Montpellier, Ecole doctorale GAIA, Thèse de doctorat, filière EERGP (Ecologie, Evolution, Ressources Génétiques, Paléontologie), /Planification systématique de la conservation basée sur les contraintes, une approche générique et expressive -- Application à l'aide à la décision pour la conservation des forêts de Nouvelle-Calédonie/, Following the PhD thesis: Researcher at IRD, UMR AMAP.
 
-*Camille Dezécache*, (collaboration) 2017, Supervisors: Bruno Hérault, Jean-Michel Salles, Université de Guyane, Ecole doctorale Diversités, santé et développement en Amazonie, Thèse de doctorat, Diversités, santé et développement en Amazonie, /Les fondements de REDD+ à l'épreuve des modèles de déforestation: cas d'étude sur le Plateau des Guyanes/, Following the PhD thesis: Researcher at IFREMER and market gardener.
+[[https://www.facebook.com/lejardindesnoiresterres/][*Camille Dezécache*]], (collaboration) 2017, Supervisors: Bruno Hérault, Jean-Michel Salles, Université de Guyane, Ecole doctorale Diversités, santé et développement en Amazonie, Thèse de doctorat, Diversités, santé et développement en Amazonie, /Les fondements de REDD+ à l'épreuve des modèles de déforestation: cas d'étude sur le Plateau des Guyanes/, Following the PhD thesis: Researcher at IFREMER and market gardener.
 
-*Clovis Grinand*, 2016, Co-supervisor: Martial Bernoux, Montpellier SupAgro, Ecole doctorale GAIA, Thèse de doctorat, filière EFSA (Écologie Fonctionnelle et Sciences Agronomiques), /Suivi et modélisation des changements d'usage des terres et stocks de carbone dans les sols et les arbres dans le cadre de la REDD+ à Madagascar -- Vers des mesures pertinentes localement et cohérentes à large échelle/, Following the PhD thesis: Researcher at Nitidae, creator of Nitidae Lab'.
+[[https://www.nitidae.org/en/qui-sommes-nous/clovis-grinand][*Clovis Grinand*]], 2016, Co-supervisor: Martial Bernoux, Montpellier SupAgro, Ecole doctorale GAIA, Thèse de doctorat, filière EFSA (Écologie Fonctionnelle et Sciences Agronomiques), /Suivi et modélisation des changements d'usage des terres et stocks de carbone dans les sols et les arbres dans le cadre de la REDD+ à Madagascar -- Vers des mesures pertinentes localement et cohérentes à large échelle/, Following the PhD thesis: Researcher at Nitidae, creator of Nitidae Lab'.
 
-*Nicolas Labrière* (collaboration), 2015, Supervisors: Yves Laumonier and Bruno Locatelli, AgroParisTech, Ecole doctorale ABIES, Thèse de doctorat, Sciences de l'environnement, /Services écosystémiques et biodiversité dans les paysages forestiers du nord de Bornéo/, Following the PhD thesis: Post-doctoral researcher, Unité EDB, University of Paul Sabatier, Toulouse, France.
+[[https://edb.cnrs.fr/annuaire/nicolas-labriere/][*Nicolas Labrière*]] (collaboration), 2015, Supervisors: Yves Laumonier and Bruno Locatelli, AgroParisTech, Ecole doctorale ABIES, Thèse de doctorat, Sciences de l'environnement, /Services écosystémiques et biodiversité dans les paysages forestiers du nord de Bornéo/, Following the PhD thesis: Post-doctoral researcher, Unité EDB, University of Paul Sabatier, Toulouse, France.
 
 ** Master students
 :PROPERTIES:
